--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,7 +264,7 @@ hr {
   justify-content: start;
 }
 
-.site-dev{
+/* .site-dev{
   background-image: url("../images/cellsite-development.jpg");
 }
 
@@ -282,7 +282,7 @@ hr {
 
 .cicd{
   background-image: url("../images/CICD.jpg");
-}
+} */
 
 /* for text area inside of flex item */
 .flex-item span {
@@ -294,3 +294,10 @@ hr {
   padding: 10px 5px;
   text-align: center;
 }
+
+.card-img {
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
+  
+  }
